[project]
name = ""
version = ""
description = ""
authors = [
    {name = "", email = ""},
]
dependencies = [
    "requests>=2.27.1",
    "lxml>=4.8.0",
    "beautifulsoup4>=4.11.1",
    "selenium>=4.1.5",
    "chromedriver-binary==101.0.4951.41.0",
]
requires-python = ">=3.9"
license = {text = ""}

[tool.pdm]

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"
