[project]
name = ""
version = ""
description = ""
authors = [
    {name = "None", email = "None"},
]
dependencies = [
    "lxml>=4.8.0",
    "selenium>=4.1.5",
    "chromedriver-binary==101.0.4951.41.0",
    "requests>=2.27.1",
]
requires-python = ">=3.9"
license = {text = "None"}

[tool.pdm]

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"
